<resources>
    <!-- Имя приложения -->
    <string name="app_name">Workout Companion</string>

    <!-- Кнопки Bottom Navigation View -->
    <string name="button_bnv_workout">Workout</string>
    <string name="button_bnv_statistics">Statistics</string>

    <!-- Кнопки действия в диалогах -->
    <string name="button_dialog_accept">Accept</string>
    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_continue">Continue</string>
    <string name="button_dialog_reset_all">Reset all</string>
    <string name="button_dialog_remove">Remove</string>
    <string name="button_dialog_start">Start</string>

    <!-- Toolbar -->
    <string name="total_time">Total time: %s</string>

    <!-- Пункты в диалоговом окне начала тренировки -->
    <string name="select_trainees">What are you going to train?</string>
    <string name="select_body_parts">Choose body parts</string>
    <string name="select_muscles">Choose muscles</string>
    <string name="select_training_place">Where are you going to train?</string>
    <string name="workout_place">Workout place</string>
    <string name="select_notifying_mode">How will you be notified?</string>
    <string name="select_rest_time">What is your rest time?</string>
    <string name="select_rest_time_via_slider">Select via slider</string>
    <string name="select_rest_time_manually">Input manually</string>
    <string name="description_time_slider">Select time between sets</string>
    <string name="title_start_workout">Start your workout</string> <!-- deprecated -->
    <string name="title_select_workout_parameters">Select parameters</string>
    <string name="title_select_muscles">Select muscles you will work out</string>
    <string name="title_select_body_parts">Select parts of the body</string>
    <string name="full_body">Full body</string>
    <string name="number_of_selected_el">Selected: %d muscles</string>
    <string name="selected_muscles">Selected: %s</string>
    <string name="train_on">Train on: %s</string>
    <string name="selected_seconds">%dsec</string>
    <string name="slider_def_value60">60sec</string>
    <string name="notifying_by_sound">By sound</string>
    <string name="notifying_by_vibration">By vibration</string>
    <string name="notifying_by_animations">By animations</string>

    <!-- Описание ошибок -->
    <string name="error_time_slider">Select time!</string>
    <string name="error_body_parts">Select body parts!</string>
    <string name="error_incorrect_time">Incorrect time!</string>
    <!-- Массив места тренировки -->
    <string name="array_item_at_home">At home</string>
    <string name="array_item_in_gym">In the GYM</string>
    <string name="array_item_outdoors">Outdoors</string>
    <!-- Массив частей тела -->
    <string name="array_item_arms">Arms</string>
    <string name="array_item_legs">Legs</string>
    <string name="array_item_core">Core</string>
    <string name="array_item_back">Back</string>
    <string name="array_item_chest">Chest</string>
    <!-- Массив мышц -->
    <string name="array_item_arm_biceps">Arm biceps</string>
    <string name="array_item_arm_triceps">Arm triceps</string>
    <string name="array_item_forearm">Forearm muscles</string>
    <string name="array_item_deltoid">Deltoid muscles</string>
    <string name="array_item_quadriceps">Quadriceps</string>
    <string name="array_item_hamstrings">Hamstrings</string>
    <string name="array_item_glutes">Glutes</string>
    <string name="array_item_calf">Calf muscles</string>
    <string name="array_item_rectus_abdominal">Rectus abdominal muscles</string>
    <string name="array_item_oblique_abdominal">Oblique abdominal muscles</string>
    <string name="array_item_transversus_abdominis">Transversus abdominis</string>
    <string name="array_item_trapezius">Trapezius</string>
    <string name="array_item_latissimus_dorsi">Latissimus dorsi</string>
    <string name="array_item_posterior_delt">Posterior delt</string>
    <string name="array_item_lower_back">Lower back</string>
    <string name="array_item_pectoralis_major">Pectoralis major muscle</string>
    <string name="array_item_clavicular">Clavicular head</string>
    <!-- Значения для включателя звука уведомления о начале/заканчивании подходов -->
    <string name="switch_with_sound">Timer with sound</string>
    <string name="switch_without_sound">Timer with vibration only</string>
    <!-- Описания контента -->
    <string name="content_description_spinner">Select one of three variants of workout placement</string>
    <string name="content_description_slider">Choose a rest time between sets</string>
    <!-- Ресурсы для секундомера/таймера -->
    <string name="general_time_start">0:00:00</string>
    <!-- Ресурсы для DrawerLayout -->
    <string name="header_change_workout_presets">Change workout</string>
    <string name="title_change_workout_settings">Main settings</string>
    <string name="change_body_parts">Body parts</string>
    <string name="change_muscles">Muscles</string>
    <string name="change_rest_time">Rest time</string>
    <string name="change_training_place">Change training place</string>
    <string name="title_additional_settings">Additional settings</string>
    <string name="title_other">Other</string>
    <string name="workout_set_notifying">Workout set notifying</string>
    <string name="toast_need_at_least_one_bp">You need at least 1 selected body part</string>
    <!-- Диалог изменения времени -->
    <string name="title_change_rest_time">Rest time changing</string>
    <string name="dialog_rest_time_sub5">-5</string>
    <string name="dialog_rest_time_add5">+5</string>
    <string name="selected_rest_time">Time - %d sec</string>
    <!-- Диалог изменения места тренировки -->
    <string name="place_changing">Place changing</string>
    <string name="dialog_message_place_changing">If you change workout place, in your personal statistic will be shown this one.</string>
    <string name="warning_nothing_selected">Nothing selected!</string>
    <string name="toast_amount_of_selected_mscls">You selected: %s</string>
    <!-- Диалог предупреждения о неиспользованности некоторых выбранных частей тела -->
    <string name="warning_dialog_unused_bp_title">Remove unused body parts?</string>
    <string name="warning_dialog_unused_bp_message">
        It seems that you chose %s and you are not going to train it. \n\nAlso you can change workout settings in right panel later.
    </string>
    <!-- Диалог настройки оповещений начала/конца подхода -->
    <string name="title_change_notifying_params">Change notifying parameters</string>
    <string name="notifying_with_sound">After the workout set will be playing sound to draw your attention</string>
    <string name="notifying_vibration">After the workout set your device will be vibrating to draw your attention</string>
    <string name="notifying_screen_anim">After the workout set, only animations will be displayed on the device screen</string>

    <string name="notifying_sd_with_sound">With sound</string>
    <string name="notifying_sd_vibration">Just vibration</string>
    <string name="notifying_sd_screen_anim">Only animation</string>

    <string name="side_menu_rest_time_hint">Or input time here</string>
    <string name="side_menu_reselected_place_toast">%s was selected</string>
    <string name="side_menu_reselected_place_item_home">Home</string>
    <string name="side_menu_reselected_place_item_gym">GYM</string>
    <string name="side_menu_reselected_place_item_outdoors">Outdoors</string>

    <string name="side_menu_reselected_workout_set_notifying_toast">Workout stages will be accompanied by %s</string>
    <string name="side_menu_reselected_ws_item_sound">the sound notifying</string>
    <string name="side_menu_reselected_ws_item_vibration">vibrations</string>
    <string name="side_menu_reselected_ws_item_animation">animations</string>

    <string name="stop_workout">Stop workout</string>
    <string name="content_description_start_your_workout">Start your workout</string>
    <string name="content_description_cancel_workout_preparations">Cancel workout preparations</string>

    <!-- Уведомления -->
    <string name="notification_content_text">Training time: %s</string>
    <string name="notification_title">Workout in progress</string>

    <string name="start_upper">START</string>

    <!-- Действия для меню основной кнопки -->
    <string name="action_flip_right">Flip right</string>
    <string name="action_flip_left">Flip left</string>

    <!-- Действия для основной кнопки -->
    <string name="action_change_general_time">Change general time</string>
    <string name="action_return_exercise_stopwatch_with_current">Return the exercise stopwatch, given current time</string>
    <string name="action_return_exercise_stopwatch_wo_current">Return the exercise stopwatch, ignoring current time</string>
    <string name="action_include_completed_approach">Include completed approach</string>
    <string name="action_change_elapsed_timer_time">Change elapsed timer time</string>
    <string name="action_change_elapsed_exercise_stopwatch_time">Change elapsed exercise stopwatch time</string>
    <string name="action_add_temp_timer">Add temporary timer</string>
    <string name="action_add_temp_stopwatch">Add temporary stopwatch</string>
    <string name="action_remove_temp_timer">Remove temporary timer</string>
    <string name="action_remove_temp_stopwatch">Remove temporary stopwatch</string>
    <string name="action_start_stretching">Start stretching</string>
    <string name="action_back_training">Back from stretching to training</string>
    <string name="action_replace_exercise_stopwatch_with_timer_with_spec_time">Replace exercise stopwatch with timer</string>
    <string name="action_move_temp_timer">Move temporary timer</string>
    <string name="action_move_temp_stopwatch">Move temporary stopwatch</string>
    <string name="action_start_approach_now">Start approach now</string>
    <string name="pause">Pause</string>

</resources>