<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:animateLayoutChanges="true">

            <!-- Описание пунктов -->
            <TextView
                android:id="@+id/mDescr_change_workout_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_change_workout_settings"
                android:textColor="@color/on_surface"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Выбор места тренировки -->
            <TextView
                android:id="@+id/place"
                style="@style/DrawerLayoutInnerTitle"
                android:text="@string/workout_place"
                app:drawableStartCompat="@drawable/ic_place_on_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mDescr_change_workout_settings" />

            <!-- Динамичная вкладка для выбора нового места -->
            <androidx.constraintlayout.widget.Group
                android:id="@+id/place_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="place_item_home,place_item_gym,place_item_outdoors" />
            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/place_item_home"
                style="@style/DrawerLayoutInnerItem"
                android:text="@string/array_item_at_home"
                app:drawableStartCompat="@drawable/ic_home_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place" />

            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/place_item_gym"
                style="@style/DrawerLayoutInnerItem"
                android:text="@string/array_item_in_gym"
                app:drawableStartCompat="@drawable/ic_gym"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_item_home" />

            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/place_item_outdoors"
                style="@style/DrawerLayoutInnerItem"
                android:layout_marginBottom="4dp"
                android:text="@string/array_item_outdoors"
                app:drawableStartCompat="@drawable/ic_outdoors"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_item_gym" />

            <!-- Выбор частей тела -->
            <TextView
                android:id="@+id/body_parts"
                style="@style/DrawerLayoutInnerTitle"
                android:layout_marginTop="4dp"
                android:text="@string/change_body_parts"
                app:drawableStartCompat="@drawable/ic_body_parts"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place_item_outdoors" />

            <!-- Динамичная вкладка для редактирования тренеруемых мышц -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/body_parts_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_parts" />

            <!-- Выбор мышц -->
            <TextView
                android:id="@+id/muscles"
                style="@style/DrawerLayoutInnerTitle"
                android:layout_marginTop="4dp"
                android:text="@string/change_muscles"
                app:drawableStartCompat="@drawable/ic_muscle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_parts_items" />

            <!-- Динамичная вкладка для редактирования тренеруемых мышц -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/muscles_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/muscles" />

            <!-- Выбор времени -->
            <TextView
                android:id="@+id/rest_time"
                style="@style/DrawerLayoutInnerTitle"
                android:layout_marginTop="4dp"
                android:text="@string/change_rest_time"
                app:drawableStartCompat="@drawable/ic_rest_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/muscles_items" />

            <!-- Динамичная вкладка для редактирования времени отдыха -->
            <androidx.constraintlayout.widget.Group
                android:id="@+id/rest_time_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="sub5sButton,current_rest_time,add5sButton,input_rest_time" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sub5sButton"
                style="@style/SideMenuOutlinedButton"
                android:layout_marginStart="30dp"
                android:text="@string/dialog_rest_time_sub5"
                app:layout_constraintBottom_toTopOf="@+id/input_rest_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rest_time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_rest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/on_surface"
                app:layout_constraintBottom_toBottomOf="@+id/sub5sButton"
                app:layout_constraintEnd_toStartOf="@+id/add5sButton"
                app:layout_constraintStart_toEndOf="@+id/sub5sButton"
                app:layout_constraintTop_toTopOf="@+id/sub5sButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add5sButton"
                style="@style/SideMenuOutlinedButton"
                android:layout_marginEnd="30dp"
                android:text="@string/dialog_rest_time_add5"
                app:layout_constraintBottom_toTopOf="@+id/input_rest_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rest_time" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_rest_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:hint="@string/side_menu_rest_time_hint"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/on_surface"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/add5sButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/sub5sButton"
                app:layout_constraintTop_toBottomOf="@+id/current_rest_time" />

            <ImageButton
                android:id="@+id/rest_time_accept_button"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:enabled="false"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_done"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_rest_time"
                app:tint="@color/on_surface_variant"
                android:contentDescription="Accept entered break time" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rest_time_accept_button" />

            <TextView
                android:id="@+id/mDescr_change_additional_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_additional_settings"
                android:textColor="@color/on_surface"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <!-- Выбор уведомления пользователя -->
            <TextView
                android:id="@+id/break_mode"
                style="@style/DrawerLayoutInnerTitle"
                android:text="@string/workout_set_notifying"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mDescr_change_additional_settings"
                app:drawableStartCompat="@drawable/ic_notifying" />

            <!-- Динамичная вкладка для выбора режима уведомления -->
            <androidx.constraintlayout.widget.Group
                android:id="@+id/break_mode_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="sub_menu_dynamic_sound,sub_menu_dynamic_vibration,sub_menu_dynamic_anim" />

            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/sub_menu_dynamic_sound"
                style="@style/DrawerLayoutInnerItem"
                android:text="@string/notifying_sd_with_sound"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/break_mode"
                app:drawableStartCompat="@drawable/ic_sound" />

            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/sub_menu_dynamic_vibration"
                style="@style/DrawerLayoutInnerItem"
                android:text="@string/notifying_sd_vibration"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_menu_dynamic_sound"
                app:drawableStartCompat="@drawable/ic_vibration" />

            <!-- Подпункт динамичного меню -->
            <TextView
                android:id="@+id/sub_menu_dynamic_anim"
                style="@style/DrawerLayoutInnerItem"
                android:text="@string/notifying_sd_screen_anim"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_menu_dynamic_vibration"
                app:drawableStartCompat="@drawable/ic_animation" />

            <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_menu_dynamic_anim" />

            <TextView
                android:id="@+id/mDescr_change_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_other"
                android:textColor="@color/on_surface"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <!-- Элемент, отвечающий за прекращение тренировки -->
            <TextView
                android:id="@+id/sub_menu_stop_workout"
                style="@style/DrawerLayoutInnerTitleRed"
                android:layout_width="match_parent"
                android:text="@string/stop_workout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mDescr_change_other"
                app:drawableStartCompat="@drawable/stop_workout_24" />

            <ImageButton
                android:id="@+id/stop_workout_accept_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_done"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/sub_menu_stop_workout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/sub_menu_stop_workout"
                app:tint="@color/error"
                android:contentDescription="Accept stopping workout" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="140dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
